--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,9 @@
     "roboto-fontface": "~0.3.0",
     "virtual-dom": "~2.0.1",
     "leaflet-providers": "~1.0.27",
-    "rbush": "https://github.com/mourner/rbush.git#~1.3.5"
+    "rbush": "https://github.com/mourner/rbush.git#~1.3.5",
+    "chartjs": "~1.0.2",
+    "jquery": "~2.1.3"
   },
   "authors": [
     "Nils Schneider <nils@nilsschneider.net>"
